--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 body {
-  background-color: lightgray;
+  background-color: rgba(184, 190, 201, 0.911);
 }
 
 ul.navbar-nav a:hover {
@@ -29,7 +29,7 @@ h2 {
 }
 
 .box {
-  margin-top: 45px;
+  margin-top: 15px;
   margin-bottom: 55px;
   padding: 10px 20px 15px;
   color: black;
